HighContrast: Fix titlebar containing >1 headerbar
by migrating the relevant code from Adwaita, to dodge unwanted doubling
up of the bottom border and such.

https://bugzilla.gnome.org/show_bug.cgi?id=769877

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1179,7 +1179,7 @@ searchbar {
  * Header bars *
  ***************/
 
-.titlebar,
+%titlebar,
 headerbar {
   min-height: 46px;
   border-width: 0 0 1px;
@@ -1264,6 +1264,21 @@ headerbar {
     }
   }
 }
+
+.titlebar:not(headerbar) {
+  window.csd > & {
+    // in csd we assume every titlebar is a headerbar so reset anything, this is needed for split toolbars cases
+    padding: 0;
+    background-color: transparent;
+    background-image: none;
+    border-style: none;
+    border-color: transparent;
+    box-shadow: none;
+  }
+
+  @extend %titlebar;
+}
+
 
 /************
  * Pathbars *
